# sinai_schemas

./: README.md
schema/: agent.json  assoc_date.json  assoc_name.json  assoc_place.json  bib.json  enums.json  excerpt.json  iiif.json  ink.json  layer.json  layout.json  ms_obj.json  note.json  paracontent.json  part.json  place.json  related_mss.json  smdl.json  text_unit.json  utils.json  viscodex.json  work.json  work_witness.json  writing.json
scripts/compile-schemas/: README.md  compile-schemas.js  package.json
scripts/validate-records/: README.md  pyproject.toml
scripts/validate-records/src/: validate_records.py
